# PACU

./: .gitignore  MANIFEST.in  README.md  environment.yml  map_to_ref.xml  pyproject.toml  requirements.txt  sciensnp.xml  setup.py
pacu/: __init__.py  galaxy.py  map_to_ref.py  run_pacu.py
pacu/app/: command.py
pacu/app/report/: htmlcitation.py  htmlelement.py  htmlreport.py  htmlreportsection.py  htmltablecell.py
pacu/app/utils/: bamutils.py  bowtie2utils.py  cliutils.py  fastaidxutils.py  iqtreeutils.py  loggingutils.py  megautils.py  reportutils.py  snakemakeutils.py  snpmatrixutils.py  trimmingutils.py  workflowutils.py
pacu/resources/: snp_workflow.smk
pacu/resources/citations/: Bogaerts_2023-ont_outbreak.json  Kumar_2018-megax.json  Li_2018-minimap2.json  Quinlan_2010-bedtools.json
pacu/resources/mega/: model_sel_ml_nucleotide_template.mao
pacu/resources/testdata/: snp_matrix.fasta
pacu/resources/testdata/vcfs/: TIAC1151.vcf
pacu/tests/: test_bamutils.py  test_iqtreeutils.py  test_map_to_ref.py  test_megautils.py  test_snpmatrixutils.py  test_workflow.py  test_workflowutils.py
sciensnp/: __init__.py  galaxy.py  map_to_ref.py  map_to_ref.smk  run_sciensnp.py
sciensnp/app/: command.py
sciensnp/app/report/: htmlbase.py  htmlcitation.py  htmlelement.py  htmlreport.py  htmlreportsection.py  htmltablecell.py
sciensnp/app/utils/: iqtreeutils.py  loggingutils.py  megautils.py  reportutils.py  snakemakeutils.py  snpmatrixutils.py  workflowutils.py
sciensnp/config/: __init__.py  config.yml
sciensnp/resources/: figtree_template.txt  snp_workflow.smk  style.css
sciensnp/resources/citations/: Bogaerts_2023-ont_outbreak.json  Croucher_2015-gubbins.json  Danecek_2021-bcftools.json  Kalyaanamoorthy_2017-iq_tree_model.json  Kumar_2018-megax.json  Nguyen_2015-iq_tree.json
sciensnp/resources/mega/: infer_ml_nucleotide_template.mao
sciensnp/resources/testdata/: phylogeny.nwk
sciensnp/tests/: test_iqtreeutils.py  test_map_to_ref.py  test_megautils.py  test_snpmatrixutils.py  test_workflow.py  test_workflowutils.py
(+4 files in other folders)
